    setup.py (why wasn't it there before?).  Added support for
    NSImageBitmapRep.  Can now create a bitmap rep w/many arg designated
    intiailizer and can invoke -getBitmapDataPlanes.   Unit test included.
    array instances returned by -getBitmapDataPlanes are mutable and, as
    such, it is now possible to edit/manipulate NSIBR directly in Python.

2003-01-03  Bill Bumgarner  <bbum@codefab.com>
    * Modules/objc/objc_support.m: Augmented error message for Unhandled type.
    
2003-01-03 Ronald Oussoren <oussoren@cistron.nl>
    * Added methods to objc/_convenience that allow us to use 
      NSArray.arrayWithObjects_ and other varargs constructors (by calling
      non-varargs versions under the hood)

2003-01-03  Bill Bumgarner  <bbum@codefab.com>
    * Scripts/runalltests: also check to make sure file ends with '.py' (to
      avoid '.py~' files.
    * Modules/Cocoa/_FoundationMapping.m: Started moving the various class
      specific method registrations to separate source files but static
      variables defeated me.  
    * Lib/Foundation/test/test_nsdata.py: Added test for NSData class cluster
      (including NSMutableData).   Refined tests a bit;  test for more
      conditions and for situations that should raise an exception.
    * NSData: Added support for -bytes.
    * NSMutableData: Added support for mutableBytes
    * NSData: Added support for +dataWithBytes:length:

2003-01-01  Bill Bumgarner  <bbum@codefab.com>

    * Project Templates/Cocoa-Python Application/bin-python-main.m: Added
    Cocoa/Cocoa.h in hopes that it'll fix indexing.

    * Project Templates/Cocoa-Python
    Application/CocoaApp.pbproj/TemplateInfo.plist: Added __main__.py,
    removed Main.py

    * Examples/CurrencyConverter/00README.txt: Created a simple README
    describing how to build the CurrencyConverter example.s a

    * Examples/addressbook.py (me): Checked to make sure there is really a